style.css
/* CSS RESET */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  /* DEBUG */
  /* outline: 2px solid red; */
}

body {
  width: 100%;
  height: 100dvh;
  min-height: 100dvh;
  max-height: 100dvh;
  overflow: hidden;
  /* font-family: "Poppins", sans-serif; */
  font-family: sans-serif;
  color: #333;

  background: linear-gradient(
    to top,
    white 10%,
    hsl(250, 50%, 80%),
    hsl(280, 50%, 80%),
    hsl(310, 50%, 80%),
    white 90%
  );

  background: radial-gradient(
    circle at bottom,
    white 20%,
    hsl(250, 50%, 80%) 35%,
    hsl(280, 50%, 80%) 50%,
    hsl(310, 50%, 80%) 60%,
    white 80%
  );
}

.head {
  height: 10dvh;
  max-height: 10dvh;
  min-height: 10dvh;
}

.content {
  height: 90dvh;
  overflow-y: scroll;
}



/* Default Tags */
h1, h2 {
  font-style: italic;
  font-weight: bold;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2.2rem;
}

p {
  font-size: 1.2rem;
}


.shadow {
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
}

/* HEADER */
header {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px 0;
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);

  width: 100%;
  height: 100%;

  & img {
    height: 100%;
  }
}

.scroll-navigator {
  display: flex;
  justify-content: center;

  align-self: flex-end;

  gap: .625em;
  width: 100%;

  padding: .625em;

  & button {
    width: 3em;
    height: 3em;
    padding: 0.5rem;

    background-color: hsla(0, 0%, 60%, 0.5);

    border: none;
    border-radius: 100%;

    cursor: pointer;
    transition: all 0.2s ease-in-out;

    & img {
      width: 100%;
      filter: invert(1);
    }
  }

  & button:hover {
    background-color: hsla(260, 40%, 70%, 0.9);
    transform: scale(1.1);
  }
}

.qr {
  width: 8vw;
}

.section {
  position: relative;
  display: flex;
  flex-direction: column;

  justify-content: space-evenly;
  min-height: 100%;
  width: 100%;

  padding: 0 2rem;
}

/* SECTION 1 */

.section1-container {
  display: flex;
  justify-content: space-evenly;
  flex-direction: row;

  width: 100%;
}

.hero-image {
  object-fit: contain;
  height: 80vh;
}

.section1-content {
  display: flex;
  justify-content: space-between;
  flex-direction: column;

  width: 40%;
  padding: 2rem 0;

  text-align: left;
}


.s1-c {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;

  gap: 1.8em;

  height: max-content;
}


.catch-live-btn {
  font-size: 1.2rem;

  text-decoration: none;

  color: inherit;

  cursor: default;
  pointer-events: none;
}

/* SECTION 2 */

.section2-container {
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-direction: row;
  flex: 1;
  height: 100%;
  width: 100%;
}

.section2-content {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;

  width: 100%;
  height: max-content;
}

.section2-text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
}


.get-started-btn {
  padding: .5rem 1.25rem;

  text-decoration: none;
  font-size: 1.2rem;
  font-weight: bold;

  color: white;
  background-color: #8581a9;

  border-radius: 1em;
  border: none;

  cursor: pointer;
  transition: background-color 0.3s;

  &:hover {
    background-color: #7a6bff;
  }

  &::before {
    text-decoration: none;
  }

  &::after {
    text-decoration: none;
  }
}

.section2-video {

  width: 100%;
  max-width: 600px;

  border-radius: 16px;
  object-fit: cover;
}

/* SECTION 3 */

.section3-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex: 1;

  flex-wrap: wrap;
  gap: 1em;
  width: 100%;
}

.steps {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  gap: 1em;
  width: 100%;
}

.step {
  width: 20%;
  min-width: max(20%, 15.625em);
  padding: .8em;

  background-color: white;

  border-radius: 1em;
  border: 2px solid gray;

  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease;

  &:hover {
    transform: translateY(-5px);
  }

  & img {
    width: 100%;
    height: 40vh;
    object-fit: cover;
    border-radius: 1em;
  }

  & h3 {
    text-align: left;
    font-size: 1.2rem;
    margin: 0.5em 0;
    color: #333;
  }

  & p {
    text-align: left;
    font-size: 0.85rem;
    color: #555;
  }
}

.tagline {
  font-size: 1.1rem;
  font-weight: bold;
  color: #333;
}

/* SECTION 4 */

.section4-container {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex: 1;

  width: 100%;
}

.section4-image {
  max-width: 500px;
  height: 70vh;
  object-fit: contain;
}

.section4-content {
  display: flex;
  flex-direction: column;
  text-align: left;
  gap: 1em;

  & p {
    color: #333;
    max-width: 40ch;
  }
}

/* FOOTER */
footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  padding: 40px 20px 20px;

  text-align: center;
  background-color: #2b2b2b;
  color: white;

  .footer-content {
    display: flex;
    justify-content: space-between;
    width: 100%;
    max-width: 1200px;
  }

  .footer-company-logo {
    width: 180px;
    height: fit-content;
    object-fit: contain;
    filter: invert(1) grayscale(1);
  }

  .footer-contact {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    & h3 {
      margin-bottom: 10px;
    }

    & p {
      text-align: left;
      font-size: 0.95rem;
      margin-bottom: 10px;
    }

    .social-media-icons {
      margin-top: 10px;
      display: flex;
      justify-content: center;
      align-items: center;
      gap: 20px;

      & a {
        text-decoration: none;

        & img {
          width: 30px;
          margin-right: 10px;
          filter: invert(1);
          transition: transform 0.2s ease-in-out;
        }

        & img:hover {
          transform: translateY(-3px);
        }
      }
    }
  }

  .bottom {
    width: 100%;
    margin-top: 30px;
    padding-top: 15px;

    font-size: 0.85rem;
    border-top: 1px solid #444;
  }
}

.overlay {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 14dvw;

  /* z-index: 100; */
}

/* Quirks for smaller screens */
@media (max-width: 1080px) {
  .overlay {
    display: none;
  }
}

/* Tablet devices */
@media (max-width: 1080px) and (min-width: 852px) {

    p {
      font-size: 1rem;
    }

  .hero-image {
    max-width: 440px;
  }

  .section1-container,
  .section4-container {
    gap: 15px;
  }


  .section2-video video {
    max-width: 450px;
  }
}

/* Mobile devices */
@media (max-width: 852px) {
  h1 {
    font-size: 2rem;
  }
  h2 {
    font-size: 1.8rem;
  }

  p {
    font-size: 1rem;
  }


  /* Hides QR */
  .qr {
    display: none;
  }

  .qr-viz {
    display: block;
  }

  .catch-live-btn {
    padding: 12px 24px;
    border-radius: 1em;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s;

    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);

    color: white;
    background-color: hsl(330, 90%, 50%);
    pointer-events: auto;
    cursor: pointer;

    &:hover {
      background-color: #e6005c;
    }
  }

  .section1-container {
    width: 100%;
    height: 100%;
    flex-grow: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .section1-content {
    flex: 1;
  }

  .s1-c {
    align-items: center;
  }

  .hero-image {
    margin: 1em;
    height: 40vh;
  }
  .section4-image {
    height: 40vh;
  }


  .section1-content {
    justify-content: space-between;
    align-items: center;
    text-align: center;
    width: 100%;
  }

  .section2-content {
    /* height: 100%; */
    flex: 1;
    flex-direction: column;
  }

  .section2-text {
    /* Moves the text below the video */
    order: 2;

    text-align: center;
    align-items: center;
    justify-content: space-between;

    height: 40%;
    width: 100%;
  }

  .section2-video {
  /* width: 100vw; */
  height: 30vh;
  object-fit: cover;
  order: 1;
}

  .steps {
    /* flex-direction: column; */
    /* align-items: center; */
  }

  .step {
    /* height: 80%; */
    min-width: 18em;
    /* width: 80%; */
  }

  .section4-container {
    flex-direction: column;
  }

  .section4-content {
    text-align: center;
    align-items: center;

    & h1 {
      font-size: 2rem;
    }
  }

  .footer {
    padding: 20px 10px 10px;
  }

  .footer-company-logo {
    max-width: 120px;
  }

  .section4-image {
    max-width: 300px;
  }
}

